# Health-Data

./: CMakeLists.txt  LICENSE  README.md
include/: healthdatafcts.h  includes.h  main.h
src/: healthdatafcts.cpp  main.cpp
